# codex

./: .gitignore  AGENTS.md  AGENT_OS_RULEBOOK.md  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: windows-bundle.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: EmptyLibrary.tsx  FeatureCard.tsx  MediaGrid.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
apps/desktop/src/styles/: global.css  media.css
ci/: check_agent_governance.sh
docs/: ARCHITECTURE.md  DECISIONS.md  MVP.md  PRD.md  RELEASE_CHECKLIST.md  ROADMAP.md  WINDOWS_INSTALL_AND_TEST.md
docs/agent/: LEARNING_CARD_TEMPLATE.json  QUALITY_GATES.yaml  README.md
docs/agent/examples/regression_cases/: regression_cases_v1.json
scripts/: onebox_agent_governance.sh  run_regression_checks.py  setup_auto_governance.sh  validate_agent_assets.py
