[package]
name = "yinghe-ai-desktop"
version = "0.1.0"
description = "影核 AI desktop shell"
authors = ["Yinghe AI"]
edition = "2021"

[lib]
name = "yinghe_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
